@@ -3,7 +3,7 @@
 /var/log/sipwitch.log {
     missingok
 	notifempty
-    weekly
+    daily
     compress
 	delaycompress
 	rotate 5
@@ -17,3 +17,13 @@
 	delaycompress
 	rotate 5
 }
+
+/var/log/sipwitch.calls {
+    missingok
+	notifempty
+    weekly
+    compress
+	delaycompress
+	rotate 5
+}
+
